--- a/garden/src/style/hero.css
+++ b/garden/src/style/hero.css
@@ -63,3 +63,53 @@
         font-size: 18px;
     }
 }
+
+.carosel-btn {
+    position: absolute;
+    z-index: 9999;
+    display: flex;
+    width: 100%;
+    bottom: 10px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 2em;
+}
+.carosel-btn button {
+    color: var(--secondary-text);
+    background-color: transparent;
+    border: none;
+    font-weight: 700;
+    font-size: 2em;
+    cursor: pointer;
+}
+.carosel-btn-focus {
+    transition: .3s ease-in-out;
+    padding-bottom: 10px !important;
+    border-bottom: 1px solid var(--primary-color) !important;
+    color: var(--primary-color) !important;
+}
+
+@media only screen and (min-width:1300px) {
+    .btn-div {
+        gap: 25px;
+    }
+    .btn-div button {
+        width: 250px;
+        height: 55px;
+        font-size: 18px;
+    }
+    .carosel-btn {
+        position: absolute;
+        right: 100px;
+        z-index: 9999;
+        display: flex;
+        top: 0;
+        height: 100%;
+        width: 0;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 2em;
+    }
+}
