--- a/garden/src/style/index.css
+++ b/garden/src/style/index.css
@@ -40,6 +40,7 @@ h3 {
   letter-spacing: 0.04em;
   text-transform: capitalize;
   color: var(--primary-color);
+  font-size: 1.1em;
 }
 p {
   font-family: 'Raleway', sans-serif;
