--- a/garden/src/style/service.css
+++ b/garden/src/style/service.css
@@ -1,12 +1,12 @@
 .grid-service {
     display: grid;
     grid-template-areas: 
-    "a a b c"
-    "a a d e";
+    "a a a b c"
+    "a a a d e";
 }
 .grid-service .left-img {
     width: 100%;
-    height: 50em;
+    height: 100%;
     object-fit: cover;
 }
 .box1{grid-area: a;}
@@ -32,7 +32,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100%;
-padding: 1em;
+    padding: 50px;
+}
+.service-box {
+    width: 65%;
+    margin: auto;
+}
+.service-box  img {
+    width: 150px;
+    object-fit: contain;
+}
+.service-box  h3 {
+    margin: 10px 0;
+}
+.service-box  p {
+    font-size: 1em;
+    line-height: 150%;
 }
