--- a/garden/src/style/service.css
+++ b/garden/src/style/service.css
@@ -1,9 +1,10 @@
 .grid-service {
     display: grid;
     grid-template-areas: 
-    "a a a b c"
-    "a a a d e";
+    "b c"
+    "d e";
 }
+
 .grid-service .left-img {
     width: 100%;
     height: 100%;
@@ -33,11 +34,14 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    padding: 50px;
+    padding: 50px 10px;
 }
 .service-box {
-    width: 65%;
+    width: 90%;
     margin: auto;
+}
+.box1{
+    display: none;
 }
 .service-box  img {
     width: 150px;
@@ -49,4 +53,21 @@
 .service-box  p {
     font-size: 1em;
     line-height: 150%;
+}
+@media only screen and (min-width:1100px) {
+    .grid-service {
+        display: grid;
+        grid-template-areas: 
+        "a a a b c"
+        "a a a d e";
+    }
+    .box1{
+        display: block;
+    }
+    .service-box {
+        width: 65%;
+    }
+    .grid-service .box {
+        padding: 50px;
+    }
 }
