--- a/garden/src/style/Gallery.css
+++ b/garden/src/style/Gallery.css
@@ -1,9 +1,18 @@
+.gallery-section {
+    margin: 10em 0;
+}
+.gallery-section h2 {
+    text-align: center;
+    margin-bottom: 2em;
+    
+    font-weight: 800;
+}
 .grid-img {
     display: grid;
-    width: 100%;
     grid-template-areas: 
     "a b c"
     "a d e";
+    grid-template-rows: repeat(2, 150px);
     gap: 5px;
 }
 .img1{ grid-area: a;}
@@ -12,7 +21,16 @@
 .img4{ grid-area: d;}
 .img5{ grid-area: e;}
 .grid-img img {
-    object-fit: contain;
+    object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+@media only screen and (min-width:1100px) { 
+    .grid-img {
+        grid-template-rows: repeat(2, 400px);
+    }
+    .gallery-section h2 {
+        font-size: 40px;
+    }
 }
