--- a/garden/src/style/about.css
+++ b/garden/src/style/about.css
@@ -4,9 +4,11 @@
 
 .about-box {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    margin: 10em 0;
+    gap: 1.3em;
+    margin: 5em 0;
 }
 .about-box .h-tag {
     font-size: 23px;
@@ -19,4 +21,9 @@
     line-height: 150%;
     color: var( --primary-text);
     font-weight: 500;
+}
+@media only screen and (min-width:1100px) { 
+    .about-box {
+        flex-direction: row;
+    }
 }
