--- a/garden/src/style/testimonial.css
+++ b/garden/src/style/testimonial.css
@@ -9,7 +9,7 @@
 .testimonial .person img {
     border-radius: 50%;
     object-fit: cover;
-    width: 80px;
+    width: 65px;
 }
 .testimonial .person {
     display: flex;
@@ -18,39 +18,52 @@
 }
 .testimonial {
     display: flex;
-    gap: 2em;
+    overflow: auto;
+    gap: 1em;
 }
 .testimonial .card {
     background-color: #F8F8F8;
     padding: 2.2em;
-    height: 400px;
+    height: 350px;
     display: flex;
     gap: 30px;
     flex-direction: column;
     justify-content: center;
     border-radius: 4.45322px;
     
-    
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: 300px;
 }
 .testimonial .card:nth-child(1){
     background-image: url("../assets/Zz_Plant1.svg");
-    background-repeat: no-repeat;
-    background-position: bottom right;
-    background-size: 300px;
+
 }
 .testimonial .card:nth-child(2){
     background-image: url("../assets/Snake_Plant1.svg");
-    background-repeat: no-repeat;
-    background-position: bottom right;
-    background-size: 300px;
+
 }
 .testimonial .card:nth-child(3){
     background-image: url("../assets/Bamboo 258.svg");
-    background-repeat: no-repeat;
-    background-position: bottom right;
-    background-size: 300px;
+
 }
 
 .testimonial .card p {
     line-height: 150%;
+}
+
+@media only screen and (min-width:1000px) {
+    .testimonial .card {
+        height: 400px;
+        padding: 2.2em;
+        background-position: bottom right;
+    }
+    .testimonial {
+        gap: 2em;
+    }
+    .testimonial .person img {
+        border-radius: 50%;
+        object-fit: cover;
+        width: 80px;
+    }
 }
