--- a/garden/src/style/index.css
+++ b/garden/src/style/index.css
@@ -80,9 +80,13 @@ b  {
   .container {
     width: 90%;
     margin: auto;
+    
   }
   h1 {
     font-size: 70px;
+  }
+  h2 {
+    font-size: 40px;
   }
   .heading-p {
     font-size: 18px;
