--- a/garden/src/style/nav.css
+++ b/garden/src/style/nav.css
@@ -1,7 +1,7 @@
 header {
     background-color: transparent;
-    position: fixed;
     width: 100%;
+    position: absolute;
     z-index: 99999;
 }
 .navigation {
