--- a/garden/src/style/plantcard.css
+++ b/garden/src/style/plantcard.css
@@ -88,13 +88,15 @@
 .Modem-bg {
     left: 0;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(27, 49, 35, 0.2);
     /* border-radius: 16px; */
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .Modem {
     width: 20em;
