--- a/garden/src/style/plantcard.css
+++ b/garden/src/style/plantcard.css
@@ -86,8 +86,10 @@
     }
 }
 .Modem-bg {
+    top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
+    z-index: 9;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -99,9 +101,70 @@
     -webkit-backdrop-filter: blur(5px);
 }
 .Modem {
-    width: 20em;
+    width: 80%;
+    display: flex;
+    gap: 2em;
+    background-color: #ffffff;
+    padding: 2em;
 }
-
 .Modem img {
     width: 100%;
+}
+.Modem .all-img {
+    flex-basis: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+.Modem .sub-img {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.Modem .sub-img img {
+    width: 30%;
+}
+.Modem .all-img .main-img {
+    width: 100%;
+}
+.Modem .desctiption {
+    flex-basis: 55%;
+}
+.desctiption .img-star {
+    display: flex;
+    gap: 5px;
+}
+.desctiption .img-star img{
+    width: 25px;
+}
+.desctiption .title h3 {
+    font-size: 35px;
+}
+.desctiption small {
+    text-decoration: line-through;
+    color: var(--primary-text);
+    opacity: 0.5;
+    font-size: 20px;
+}
+.desctiption b {
+    font-size: 25px;
+}
+.desctiption .title {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.desctiption .head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.desctiption .head button {
+    height: 55px;
+    width: 200px;
+    background-color: var(--primary-color);
+    border:none;
+    color: var(--secondary-text);
+    border-radius: 10px;
+    font-size: 18px;
 }
