--- a/garden/src/style/plantcard.css
+++ b/garden/src/style/plantcard.css
@@ -101,11 +101,15 @@
     -webkit-backdrop-filter: blur(5px);
 }
 .Modem {
+    position: relative;
+    border-radius: 10px;
     width: 80%;
     display: flex;
+    /* align-items: center; */
     gap: 2em;
     background-color: #ffffff;
     padding: 2em;
+    max-height: 50em;
 }
 .Modem img {
     width: 100%;
@@ -114,6 +118,7 @@
     flex-basis: 45%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 1em;
 }
 .Modem .sub-img {
@@ -167,4 +172,95 @@
     color: var(--secondary-text);
     border-radius: 10px;
     font-size: 18px;
+}
+.desctiption .nav-body {
+    margin: 2em 0 1em;
+    padding-bottom: 15px;
+    border-bottom: 1.6px solid #CACACA;
+}
+.desctiption .nav-body ul {
+    display: flex;
+    gap: 2em;
+}
+
+.desctiption .nav-body ul li {
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.desctiption .nav-body ul li span {
+    background-color: var(--primary-color);
+    padding: 5px 8px;
+    border-radius: 4px;
+    color: var(--secondary-text);
+}
+.nav-body .active {
+    opacity: 1 !important;
+}
+.comment {
+    display: flex;
+    gap: 15px;
+}
+.comment img {
+    align-self: flex-end;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1.5px solid var(--primary-color);
+}
+.comment-txt {
+    background-color: #f5f5f5;
+    padding: 10px;
+    border-radius: 10px;
+}
+.comment-box {
+    padding: 10px;
+    height: 30em;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow: auto;
+}
+.input-commnet  {
+    margin-top: 1em;
+}
+.input-commnet form {
+    display: flex;
+    justify-content: space-between;
+}
+.input-commnet input {
+    outline: none;
+    border: 1px solid var(--primary-color);
+
+    border-radius: 10px;
+    padding-left: 10px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    height: 50px;
+    width: 80%;
+}
+.input-commnet button {
+    border-radius: 10px;
+    border: 1px solid var(--primary-color);
+    background-color: var(--primary-color);
+    color: var(--secondary-text);
+    font-size: 17px;
+    height: 50px;
+    width: 19%;
+}
+.closeBtn {
+    top: -50px;
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: var(--primary-text);
+    font-size: 16px;
+}
+.closeBtn:hover {
+    transition: ease-in-out .2s;
+    color: var(--primary-color);
 }
