--- a/garden/src/style/ModemPlants.css
+++ b/garden/src/style/ModemPlants.css
@@ -148,7 +148,7 @@
 }
 .comment-box {
     padding: 10px;
-    height: 30em;
+    max-height: 30em;
     display: flex;
     flex-direction: column;
     gap: 10px;
